--- a/index.html
+++ b/index.html
@@ -2,29 +2,57 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viol 3 – Anmälan</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
       margin: 0;
-      padding: 20px;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #f3f4f6, #e5e7eb);
+      color: #111827;
     }
+
     .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background-color: #fff;
+      max-width: 700px;
+      margin: 40px auto;
       padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
     }
+
     h1 {
-      color: #333;
+      font-size: 1.8rem;
+      margin-bottom: 0.5rem;
+      color: #1f2937;
     }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 1.5rem;
+    }
+
     iframe {
       width: 100%;
       height: 800px;
       border: none;
+      border-radius: 8px;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        margin: 20px;
+        padding: 16px;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      p {
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
@@ -36,7 +64,9 @@
       Vi ses ca 14:00–16:00. Fredag/lördag kanske vi kombinerar med O'Learys för de som vill.<br>
       Tiden kan justeras lite beroende på vad som passar bäst.
     </p>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1WpbcE5c9MtU43pWorqRGRM6_0OCcAAwRJYNtzw-nBTSo1A/viewform?embedded=true">Laddar formulär…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1WpbcE5c9MtU43pWorqRGRM6_0OCcAAwRJYNtzw-nBTSo1A/viewform?embedded=true">
+      Laddar formulär...
+    </iframe>
   </div>
 </body>
 </html>
