--- a/index.html
+++ b/index.html
@@ -23,14 +23,9 @@
 
     h1 {
       font-size: 1.8rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 1.2rem;
       color: #1f2937;
-    }
-
-    p {
-      font-size: 1rem;
-      line-height: 1.6;
-      margin-bottom: 1.5rem;
+      text-align: center;
     }
 
     iframe {
@@ -49,21 +44,12 @@
       h1 {
         font-size: 1.5rem;
       }
-
-      p {
-        font-size: 0.95rem;
-      }
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Viol 3 – Anmälan</h1>
-    <p>
-      Tanken är att gå igenom inför Viol 3, max 2 timmar.<br>
-      Vi ses ca 14:00–16:00. Fredag/lördag kanske vi kombinerar med O'Learys för de som vill.<br>
-      Tiden kan justeras lite beroende på vad som passar bäst.
-    </p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1WpbcE5c9MtU43pWorqRGRM6_0OCcAAwRJYNtzw-nBTSo1A/viewform?embedded=true">
       Laddar formulär...
     </iframe>
